uxarch-59 Adding correct z-index for fixed-top navbar

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -13,6 +13,7 @@
 
   &.navbar-fixed-top {
     position: fixed;
+    z-index: $zindex-navbar-fixed;
     width: 100%;
   }
 
